--- a/src/styles/components/player/PlayerWatchOn.module.scss
+++ b/src/styles/components/player/PlayerWatchOn.module.scss
@@ -1,6 +1,6 @@
 .playerWatchOn {
   @apply inline-flex items-center space-x-3;
-  @apply bg-black/60 text-white hover:text-white;
+  @apply bg-gray-800/60 text-white hover:text-white;
   @apply font-medium text-base tracking-tight;
   @apply p-4;
 
